added picture, adjusted resume

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -39,23 +39,6 @@
 		</ul>
 		<p>* denotes currently taking</p>
 	</div>
-	<!-- LEHS -->
-	<div class="floatCleared">
-		<hr></hr>
-		<p class="alignleft"><strong>Lakota East High School, Liberty Twp, OH</strong></p>
-		<p class="alignright"><i>May 2013</i></p>
-	</div>
-	<div class="floatCleared">
-		<p class="alignleft"><strong>GPA: 4.75/4.00 (Weighted), 4.00/4.00 (Unweighted)</strong></p>
-		<p class="alignright"><strong>Valedictorian (1/685)</strong></p>
-	</div>
-	<br/></br>
-	<p><i>Awards</i></p>
-	<ul>
-		<li>NCWIT Aspirations in Computing Ohio Affiliate Award</li>
-		<li>National AP Scholar</li>
-		<li>National Merit Commended Scholar</li>
-	</ul>
 </div>
 <h1>Work Experience</h1>
 <div id="workExperience" class="row">
@@ -186,39 +169,68 @@
 </div>
 <h1>Skills</h1>
 <div id="skills" class="row">
-	<div class="col-md-3">
-		<p><i>Programming Languages</i></p>
-		<ul>
-			<li>Java (Proficient)</li>
-			<li>C# (Advanced)</li>
-			<li>VBA (Basic)</li>
-		</ul>
-	</div>
-	<div class="col-md-3">
-		<p><i>Back-end/Database Languages</i></p>
-		<ul>
-			<li>PHP (Basic)</li>
-			<li>SQL (Basic)</li>
-			<li>MySQL (Basic)</li>
-		</ul>
-	</div>
-	<div class="col-md-3">
-		<p><i>Front-end Development</i></p>
-		<ul>
-			<li>HTML (Proficient)</li>
-			<li>CSS (Proficient)</li>
-			<li>WordPress (Proficient)</li>
-			<li>JavaScript (Proficient)</li>
-			<li>jQuery (Basic)</li>
-		</ul>
-	</div>
-	<div class="col-md-3">
-		<p><i>Version Control Systems</i></p>
-		<ul>
-			<li>Mercurial (Proficient)</li>
-			<li>Git (Proficient)</li>
-			<li>SVN (Basic)</li>
-			<li>Team Foundation Server (Basic)</li>
-		</ul>
-	</div>
+	<h3><i>Programming Languages</i></h3>
+	<p>Java</p>
+	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>C#</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>VBA</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
+  	<h3><i>Back-end/Database Languages</i></h3>
+  	<p>PHP</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
+  	<p>SQL</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
+  	<p>MySQL</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
+  	<h3><i>Front-end Development</h3></i>
+  	<p>HTML</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>CSS</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>WordPress</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>JavaScript</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>jQuery</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
+  	<h3><i>Version Control Systems</i></h3>
+  	<p>Mercurial</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>Git</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	</div>
+  	<p>SVN</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
+  	<p>Team Foundation Server</p>
+  	<div class="progress">
+  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	</div>
 </div>
