--- a/pages/resume.html
+++ b/pages/resume.html
@@ -170,10 +170,11 @@
 <h1>Skills</h1>
 <div id="skills" class="row">
 	<h3><i>Programming Languages</i></h3>
-	<p>Java</p>
+	<p>Java 
 	<div class="progress">
   		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
   	</div>
+  	</p>
   	<p>C#</p>
   	<div class="progress">
   		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
