--- a/pages/resume.html
+++ b/pages/resume.html
@@ -178,9 +178,13 @@
   			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
   		</div>
   	</div>
-  	<p>C#</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-1">
+  		<p>C#</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  		</div>
   	</div>
   	<p>VBA</p>
   	<div class="progress">
