Readjusting every single of the progress bars

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -183,62 +183,114 @@
   	</div>
   	<div class="col-md-11">
   		<div class="progress">
-  			<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
   		</div>
   	</div>
-  	<p>VBA</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-1">
+  		<p>VBA</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
   	</div>
   	<h3><i>Back-end/Database Languages</i></h3>
-  	<p>PHP</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-1">
+  		<p>PHP</p>
   	</div>
-  	<p>SQL</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
   	</div>
-  	<p>MySQL</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-1">
+  		<p>SQL</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
+  	</div>
+  	<div class="col-md-1">
+  		<p>MySQL</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
   	</div>
   	<h3><i>Front-end Development</h3></i>
-  	<p>HTML</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-1">
+  		<p>HTML</p>
   	</div>
-  	<p>CSS</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  		</div>
   	</div>
-  	<p>WordPress</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-1">
+  		<p>CSS</p>
   	</div>
-  	<p>JavaScript</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  		</div>
   	</div>
-  	<p>jQuery</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-1">
+  		<p>WordPress</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  		</div>
+  	</div>
+  	<div class="col-md-1">
+  		<p>JavaScript</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  		</div>
+  	</div>
+  	<div class="col-md-1">
+  		<p>jQuery</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
   	</div>
   	<h3><i>Version Control Systems</i></h3>
-  	<p>Mercurial</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-1">
+  		<p>Mercurial</p>
   	</div>
-  	<p>Git</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuenow="0" aria-valuemax="100" style="width: 60%;">Proficient</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  		</div>
   	</div>
-  	<p>SVN</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-1">
+  		<p>Git</p>
   	</div>
-  	<p>Team Foundation Server</p>
-  	<div class="progress">
-  		<div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuenow="0" aria-valuemax="100" style="width: 40%;">Basic</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  		</div>
+  	</div>
+  	<div class="col-md-1">
+  		<p>SVN</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
+  	</div>
+  	<div class="col-md-1">
+  		<p>Team Foundation Server</p>
+  	</div>
+  	<div class="col-md-11">
+  		<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuenow="0" aria-valuemax="100" style="width: 50%;">Basic</div>
+  		</div>
   	</div>
 </div>
