--- a/pages/resume.html
+++ b/pages/resume.html
@@ -286,7 +286,7 @@
   		</div>
   	</div>
   	<div class="col-md-1">
-  		<p>Team Foundation Server</p>
+  		<p>TFS</p>
   	</div>
   	<div class="col-md-11">
   		<div class="progress">
