adjusted my skills

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -225,7 +225,7 @@
   	</div>
   	<div class="col-md-11">
   		<div class="progress">
-  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  			<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuenow="0" aria-valuemax="100" style="width: 85%;">Advanced</div>
   		</div>
   	</div>
   	<div class="col-md-1">
@@ -233,7 +233,7 @@
   	</div>
   	<div class="col-md-11">
   		<div class="progress">
-  			<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuenow="0" aria-valuemax="100" style="width: 75%;">Proficient</div>
+  			<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuenow="0" aria-valuemax="100" style="width: 85%;">Advanced</div>
   		</div>
   	</div>
   	<div class="col-md-1">
