--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,7 +41,7 @@
   	</div>
 </div>
 <div class="row">
-	<div class="col-md-4">
+	<!--<div class="col-md-4">
 		<h1>ExpiringYa</h1>
 		<p><i>IN PROGRESS</i></p>
 		<p>An app that notifies users when their food is about to expire</p>
@@ -55,14 +55,12 @@
 		<p>HTML, CSS, C#, Javascript, KnockoutJS, Xamarin Studio</p>
 		<button value="View On Github" class="btn btn-default"><a href="https://github.com/elchao96/PlanQuest" target="_blank">View On Github</a></button>
 	</div>
-	<div class="col-md-4">
+-->	<div class="col-md-4">
 		<h1>Miss Possible's Website</h1>
 		<p>Designed the website for startup Miss Possible, who's goal is to develop dolls and apps that empower girls to dream big</p>
 		<p>HTML, CSS, Javascript, PHP, MySQL</p>
 		<button value="Learn More" class="btn btn-default"><a href="http://www.bemisspossible.com" target="_blank">Learn More</a></button>
 	</div>
-</div>
-<div class="row">
 	<div class="col-md-4">
 		<h1>Where's Waldo International</h1>
 		<p>With 3 team members, created a game that sticks Waldo in a random location within the world and lets you find him</p>
@@ -75,6 +73,8 @@
 		<p>HTML, CSS, Javascript, PHP, MySQL</p>
 		<button value="Learn More" class="btn btn-default"><a href="http://wcssignin.web.engr.illinois.edu/" target="_blank">Learn More</a></button>
 	</div>
+</div>
+<div class="row">
 	<div class="col-md-4">
 		<h1>Recourser</h1>
 		<p>With 3 team members, created a web app that allows students to plan out what classes they want to take for each semester of college</p>
