--- a/WCS/WCSTechnicalInterviewSolutions/index.html
+++ b/WCS/WCSTechnicalInterviewSolutions/index.html
@@ -93,7 +93,7 @@
 					<p><a href="https://app.box.com/crackcode" target="_blank">https://app.box.com/crackcode</a></p>
 					<ul>
 						<li>Implement an algorithm to delete a node in the middle of a single linked list, given only access to that node. pg. 113</li>
-						<li>Given a circular linked list, implement an algorithm which returns node at the beginning of the loop. DEFINITION: Circular linked list: A (corrupt) linked list in which a node’s next pointer points to an earlier node, so as to make a loop in the linked list. pg. 115</li>
+						<li>Given a circular linked list, implement an algorithm which returns node at the beginning of the loop. pg. 115</li>
 						<li>Write code to remove duplicates from an unsorted linked list. pg. 111</li>
 					</ul>
 				</section>
@@ -103,7 +103,7 @@
 					<p><a href="https://app.box.com/crackcode" target="_blank">https://app.box.com/crackcode</a></p>
 					<ul>
 						<li>How would you design a stack which, in addition to push and pop, also has a function min which returns the minimum element? Push, pop, and min should all operate in O(1) time. pg. 119</li>
-						<li>Imagine a literal stack of plates. If the stack gets too high, it might topple. Therefore, in real life, we would likely start a new stack when it reaches some threshold. Implement a data structure SetofStacks that mimics this. SetOfStacks should be composed of several stack, and should create a new stack once the previous one exceeds capacity. SetOfStacks.push() and SetOfStacks.pop() should behave identically like a stack. pg. 121</li>
+						<li>SetOfStacks Question pg. 121</li>
 						<li>Implement a MyQueue class which implements a queue using two Stacks. pg. 126</li>
 						<li>Implement Towers of Hanoi using stacks. pg. 124</li>
 					</ul>
