--- a/WCS/WCSTechnicalInterviewPrep/index.html
+++ b/WCS/WCSTechnicalInterviewPrep/index.html
@@ -115,6 +115,7 @@
 						<li>If I use X sort or search, what is its runtime? Why is it so?</li>
 						<li>What are some corner cases that I have to consider?</li>
 					</ul>
+					<p>For our practice session today, this <a href="http://elchao96.github.io/WCS/WCSTechnicalInterviewSolutions/#/">link</a> provides access to the book with our solutions.</p>
 				</section>
 				<section>
 						<h2>Upcoming events</h2>
