--- a/WCS/WCSTechnicalInterviewPrep/index.html
+++ b/WCS/WCSTechnicalInterviewPrep/index.html
@@ -61,7 +61,6 @@
 
 				<!-- Example of nested vertical slides -->
 				<section>
-					<section class="navigate-down">
 						<h2>Resume Tips</h2>
 						<ul>
 							<li>Try to keep your resume on one page if possible.</li>
@@ -73,18 +72,9 @@
 							<li>List languages in order from what you know best to last.</li>
 						</ul>
 					</section>
-					<section>
-						<h2>Upcoming events</h2>
-						<ul>
-							<li>November GM with Dow Chemical - Nov. 18 11-1:30pm</li>
-							<li>Tech Team Women's Hackathon - Dec.</li>
-							<li>Corporate Mentoring - Spring Semester</li>
-						</ul>
-					</section>
 				</section>
 
 				<section>
-					<section class="navigate-down">
 					<h2>Technical Interview Tips - Process</h2>
 					<ul>
 						<li>Pick the language that you are most comfortable with.</li>
@@ -95,18 +85,8 @@
 						<li>Even if you don’t get a question correct, explain in depth how and why you chose your solution, this will help them understand that you have the knowledge.</li>
 					</ul>
 				</section>
-				<section>
-						<h2>Upcoming events</h2>
-						<ul>
-							<li>November GM with Dow Chemical - Nov. 18 11-1:30pm</li>
-							<li>Tech Team Women's Hackathon - Dec.</li>
-							<li>Corporate Mentoring - Spring Semester</li>
-						</ul>
-					</section>
-				</section>
 
 				<section>
-					<section class="navigate-down">
 					<h2>Technical Interview Tips - Keep in mind</h2>
 					<ul>
 						<li>What data structures can help solve this problem?</li>
@@ -115,16 +95,7 @@
 						<li>If I use X sort or search, what is its runtime? Why is it so?</li>
 						<li>What are some corner cases that I have to consider?</li>
 					</ul>
-					<p>For our practice session today, this <a href="http://elchao96.github.io/WCS/WCSTechnicalInterviewSolutions/#/">link</a> provides access to the book with our solutions.</p>
-				</section>
-				<section>
-						<h2>Upcoming events</h2>
-						<ul>
-							<li>November GM with Dow Chemical - Nov. 18 11-1:30pm</li>
-							<li>Tech Team Women's Hackathon - Dec.</li>
-							<li>Corporate Mentoring - Spring Semester</li>
-						</ul>
-					</section>
+					<p>For our practice session today, this <a href="http://elchao96.github.io/WCS/WCSTechnicalInterviewSolutions/">link</a> provides access to the book with our solutions.</p>
 				</section>
 
 				<section>
