organizing files and layouts

--- a/index.html
+++ b/index.html
@@ -37,22 +37,21 @@
     			<div class="collapse navbar-collapse" id="mainNav">
      				<ul class="nav navbar-nav">
        					<li><a href="#">Home</a></li>
+                        <li><a href="#about">About Me</a></li>
+                        <li><a href="#education">Education</a></li>
 						<li><a href="#experience">Experience</a></li>
 						<li><a href="#projects">Projects</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#follow">Follow Me</a></li>
 						<li><a href="#contact">Contact Me</a></li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://github.com/elchao96" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/elchao96" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-						<li><a href="https://twitter.com/emilychaosays" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                        <li><a href="https://medium.com/@emchao" target="_blank">Blog</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
         <div class="wrapper">
-            <div class="jumbotron text-center">
+            <div class="about">
                 <h1>Emily Chao</h1>
+                <p>Currently a Computer Science student at the University of Illinois at Urbana-Champaign. </p>
                 <p>UIUC CS '17</p>
                 <p>Miss Possible Web Dev, Part of NCWITAiC</p>
                 <p>Passionate about Gender Equality, AAPI LGBTQ Visibility</p>
